@@ -140,7 +140,7 @@ typedef struct bb_configs {
 typedef struct bb_instances {
 	uint32_t id;
 	uint64_t bytes;
-	char *label;
+	uint32_t session;
 } bb_instances_t;
 
 /* Description of each Cray DW pool entry
@@ -241,6 +241,8 @@ static int	_parse_bb_opts(struct job_descriptor *job_desc,
 static void	_parse_config_links(json_object *instance, bb_configs_t *ent);
 static void	_parse_instance_capacity(json_object *instance,
 					 bb_instances_t *ent);
+static void	_parse_instance_links(json_object *instance,
+				      bb_instances_t *ent);
 static void	_pick_alloc_account(bb_alloc_t *bb_alloc);
 static void	_purge_bb_files(uint32_t job_id, struct job_record *job_ptr);
 static void	_purge_vestigial_bufs(void);
@@ -1211,7 +1213,7 @@ static void _load_state(bool init_config)
 				strtol(sessions[i].token, &end_ptr, 10);
 		}
 		for (j = 0; j < num_instances; j++) {
-			if (xstrcmp(sessions[i].token, instances[j].label))
+			if (sessions[i].id != instances[j].session)
 				continue;
 			bb_alloc->size += instances[j].bytes;
 		}
@@ -4446,12 +4448,6 @@ _bb_free_configs(bb_configs_t *ents, int num_ent)
 static void
 _bb_free_instances(bb_instances_t *ents, int num_ent)
 {
-	int i;
-
-	for (i = 0; i < num_ent; i++) {
-		xfree(ents[i].label);
-	}
-
 	xfree(ents);
 }
 
@@ -4652,6 +4648,28 @@ _parse_instance_capacity(json_object *instance, bb_instances_t *ent)
 	}
 }
 
+/* Parse "links" object in the "instance" object */
+static void
+_parse_instance_links(json_object *instance, bb_instances_t *ent)
+{
+	enum json_type type;
+	struct json_object_iter iter;
+	int64_t x;
+
+	json_object_object_foreachC(instance, iter) {
+		type = json_object_get_type(iter.val);
+		switch (type) {
+		case json_type_int:
+			x = json_object_get_int64(iter.val);
+			if (!xstrcmp(iter.key, "session"))
+				ent->session = x;
+			break;
+		default:
+			break;
+		}
+	}
+}
+
 /* _json_parse_instances_object()
  */
 static void
@@ -4660,7 +4678,6 @@ _json_parse_instances_object(json_object *jobj, bb_instances_t *ent)
 	enum json_type type;
 	struct json_object_iter iter;
 	int64_t x;
-	const char *p;
 
 	json_object_object_foreachC(jobj, iter) {
 		type = json_object_get_type(iter.val);
@@ -4668,17 +4685,13 @@ _json_parse_instances_object(json_object *jobj, bb_instances_t *ent)
 		case json_type_object:
 			if (xstrcmp(iter.key, "capacity") == 0)
 				_parse_instance_capacity(iter.val, ent);
+			if (xstrcmp(iter.key, "links") == 0)
+				_parse_instance_links(iter.val, ent);
 			break;
 		case json_type_int:
 			x = json_object_get_int64(iter.val);
 			if (xstrcmp(iter.key, "id") == 0) {
 				ent->id = x;
-			}
-			break;
-		case json_type_string:
-			p = json_object_get_string(iter.val);
-			if (xstrcmp(iter.key, "label") == 0) {
-				ent->label = xstrdup(p);
 			}
 			break;
 		default:
